Added Header Part

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,12 +1,15 @@
 <div class="col-md-12 header-section custom-header">
-  <div class="col-md-3 col-sm-5 col-xs-5">
-    <p>Speakers Program</p>
-    <h2>Create Event</h2>
-  </div>
+  <div class="col-md-12">
+    <div class="col-md-12 header-routing-panel">
+      <p class="clr-blue">Speakers Program</p>
+    </div>
 
-  <div class="col-md-9 col-sm-7 col-xs-7"> 
-    <div class="profile-info pull-right">
-      User Profile
-    </div> 
+    <div class="col-md-6">
+      <h2 class="header-text">Create Event</h2>
+    </div>
+
+    <div class="col-md-6 text-right clr-blue header-text-right">
+      <span>User Profile</span><span class="glyphicon glyphicon-user"></span>
+    </div>
   </div>
 </div>
