--- a/src/app/create-event/create-event.component.css
+++ b/src/app/create-event/create-event.component.css
@@ -266,3 +266,14 @@ td.mat-cell:first-of-type, td.mat-footer-cell:first-of-type, th.mat-header-cell:
 .icon-pallet .glyphicon{
     margin-right: 10px;
 }
+.glyphicon.glyphicon-user{ 
+    border: 1px solid blue;
+    border-radius: 50%;
+    padding: 4px;
+    background: aliceblue;
+    margin-left: -2px;
+    font-size: 9px;
+}
+.icon-pallet li{
+    margin-bottom: 5px;
+}
