--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,12 +1,31 @@
+.header-section{
+    padding: 30px;
+}
 .header-text{
-    color: #1D232F;	font-family: Lato;	font-size: 30px;	line-height: 44px;
-    padding-top: 14px;
-}    
-.header-right-text {
+    color: #1D232F;	font-family: Lato;	font-size: 30px; margin-bottom: 0px; margin-top: 0px;
+}   
+.header-routing-panel p{
+    margin-bottom: 0px;
+} 
+.clr-blue{
+    color: blue;
+}
+.header-text-right .glyphicon.glyphicon-user{
+    margin-left: 10px; 
+    border: 1px solid blue;
+    border-radius: 50%;
+    padding: 4px;
+    background: aliceblue;
+}
+.header-text-right span{
+    margin-top: 7px; 
+}
+
+/* .header-right-text {
     background-color: white;
     border: 1px solid #2B62CA;
     padding: 5px 7px;
-    /* border-radius: 8px; */
+     
     color: #2B62CA;
     font-family: Lato;
     font-size: 15px;
@@ -21,7 +40,7 @@
   padding: 13px 60px;
   background: #fff;
   border-bottom: 1px solid #DBE6F8;
-}
+} */
  
 
 
