Some changes done

--- a/src/styles.css
+++ b/src/styles.css
@@ -194,10 +194,10 @@ color: white;
   font-weight: normal;
 }
 .mat-radio-button.mat-accent.mat-radio-checked .mat-radio-outer-circle {
-  border-color: blue;
+  border-color: #1873d4;
 }
 .mat-radio-button.mat-accent .mat-radio-inner-circle, .mat-radio-button.mat-accent .mat-radio-ripple .mat-ripple-element:not(.mat-radio-persistent-ripple), .mat-radio-button.mat-accent.mat-radio-checked .mat-radio-persistent-ripple, .mat-radio-button.mat-accent:active .mat-radio-persistent-ripple{
-  background-color: blue;
+  background-color: #1873d4;
 } 
 .mat-input-flex.mat-form-field-flex{
   border: 1px solid #cecece;
@@ -223,7 +223,7 @@ color: white;
   background-color: blue;
 }
 .mat-checkbox-checked.mat-accent .mat-checkbox-background, .mat-checkbox-indeterminate.mat-accent .mat-checkbox-background {
-  background-color: blue;
+  background-color: #1873d4;
 }
 .mat-step-label{
   position: absolute;
