--- a/src/app/create-event/create-event.component.html
+++ b/src/app/create-event/create-event.component.html
@@ -3,7 +3,7 @@
 
     <mat-card class="first-wrap line-height mat-card-sd">
       <ng-template matStepLabel>Program Logistics</ng-template>
-      <div class="col-md-12"><span class="header-text-style">Event Inforrmation</span></div>
+      <div class="col-md-12"><span class="header-text-style">Event Information</span></div>
       <div class="clearfix"></div>
       <hr class="hr-color">
       <div class="col-md-4">
@@ -192,7 +192,7 @@
   <mat-step [stepControl]="secondFormGroup" class="event-second-section">
     <ng-template matStepLabel>Select Speaker</ng-template>
     <mat-card class="first-wrap line-height mat-card-sd">
-      <div class="col-md-12"><span class="header-text-style">Event Inforrmation</span></div>
+      <div class="col-md-12"><span class="header-text-style">Event Information</span></div>
       <div class="clearfix"></div>
       <hr class="hr-color">
       <div class="col-md-4">
@@ -266,7 +266,7 @@
       <div class="clearfix"></div>
       <hr>
       <div class="col-md-12">
-        <p class="mrb-20">If you would like to add an alternative speaker please use the filter criteria to serach</p>
+        <p class="mrb-20">If you would like to add an alternative speaker please use the filter criteria to search for one</p>
       </div>
 
       <div class="form-group">
@@ -417,6 +417,108 @@
           <button class="btn primary-custom mat-button">Add Speaker</button>
         </div>
       </div>
+      
+      <hr>
+      <div class="clearfix"></div>
+      <div class="col-md-1">
+        <img src="assets/img/user-profile2.png" width="50">
+      </div>
+      <div class="col-md-3 pl-0 line-height">
+        <ul class="custom-ul">
+          <li><b>Spkeaker:</b> Marie Hamilton</li>
+          <li><b>Gender:</b> Female</li>
+          <li><b>City & State</b>: Sarasota, FL</li>
+        </ul>
+      </div>
+
+      <div class="col-md-3 pl-0 line-height">
+        <ul>
+          <li><b>Role:</b> Patient</li>
+          <li><b>Date of Diagnosis:</b> 7/2/2015</li>
+          <li><b>Treatment Start Date:</b> 7/25/2015</li>
+        </ul>
+      </div>
+      <div class="clearfix"></div>
+
+      <div class="col-md-1"></div>
+      <div class="col-md-5 pl-0">
+        <p><b>Biography:</b></p>
+        <p>
+          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+          industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+          scrambled it to make a type specimen book. It has survived not only five centuries,
+        </p>
+      </div>
+      <div class="col-md-6">
+        <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" style="width:100%">
+
+          <!--- Note that these columns can be defined in any order.
+                        The actual rendered columns are set as a property on the row definition" -->
+
+          <!-- Position Column -->
+          <ng-container matColumnDef="S">
+            <th mat-header-cell *matHeaderCellDef> <b>S</b> </th>
+            <td mat-cell *matCellDef="let element"> {{element.S}} </td>
+          </ng-container>
+
+          <!-- Name Column -->
+          <ng-container matColumnDef="M">
+            <th mat-header-cell *matHeaderCellDef> <b>M</b> </th>
+            <td mat-cell *matCellDef="let element"> {{element.M}} </td>
+          </ng-container>
+
+          <!-- Weight Column -->
+          <ng-container matColumnDef="T">
+            <th mat-header-cell *matHeaderCellDef> <b>T</b> </th>
+            <td mat-cell *matCellDef="let element">{{element.T}} </td>
+          </ng-container>
+
+          <ng-container matColumnDef="W">
+            <th mat-header-cell *matHeaderCellDef> <b>W</b> </th>
+            <td mat-cell *matCellDef="let element">{{element.W}} </td>
+          </ng-container>
+
+          <ng-container matColumnDef="TH">
+            <th mat-header-cell *matHeaderCellDef> <b>TH</b> </th>
+            <td mat-cell *matCellDef="let element">{{element.TH}} </td>
+          </ng-container>
+
+          <ng-container matColumnDef="F">
+            <th mat-header-cell *matHeaderCellDef> <b>F</b> </th>
+            <td mat-cell *matCellDef="let element">{{element.F}} </td>
+          </ng-container>
+
+          <ng-container matColumnDef="SA">
+            <th mat-header-cell *matHeaderCellDef> <b>SA</b> </th>
+            <td mat-cell *matCellDef="let element">{{element.SA}} </td>
+          </ng-container>
+
+
+
+
+          <!-- Custom Header || Footer Start -->
+          <ng-container matColumnDef="header-row-first-group">
+            <th class="mat-table-top" mat-header-cell *matHeaderCellDef [style.text-align]="center" [attr.colspan]="8">
+              <span class="clr-blue"> Availability </span>
+            </th>
+          </ng-container>
+
+          <ng-container matColumnDef="header-row-second-group">
+            <th mat-header-cell *matHeaderCellDef [attr.colspan]="0"> </th>
+          </ng-container>
+
+          <tr mat-header-row *matHeaderRowDef="['header-row-first-group', 'header-row-second-group']"></tr>
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+      </div>
+
+      <div class="form-group mrt-60">
+        <div class="col-md-12 text-right">
+          <button class="btn btn-search fnt-weigth"> View Details </button>
+          <button class="btn primary-custom mat-button">Add Speaker</button>
+        </div>
+      </div>
 
     </mat-card>
   </mat-step><!-- event-second-section End-->
@@ -465,7 +567,7 @@
         <p><span class="vanue-style">Phone:</span> 201-555-7948</p>
         <mat-radio-group>
           <mat-radio-button value="1" [checked]="true">Preferred Venue </mat-radio-button><br>
-          <mat-radio-button value="2">Alternate Vanue </mat-radio-button>
+          <mat-radio-button value="2">Alternate Venue </mat-radio-button>
         </mat-radio-group>
       </div>
       <div class="col-md-4">
@@ -709,14 +811,14 @@
           <hr class="hr-color">
         </div>
         <div class="col-md-4">
-          <p><span class="vanue-style">Name:</span> Stonehouse Center</p>
-          <p><span class="vanue-style">Type:</span> Convention Center</p>
-          <p><span class="vanue-style">Email:</span> shcenter@emial.com</p>
+          <p><span class="vanue-style">Name:</span> 111 Chop House</p>
+          <p><span class="vanue-style">Type:</span>  Restaurant</p>
+          <p><span class="vanue-style">Email:</span> chouse@emial.com</p>
         </div>
         <div class="col-md-4">
-          <p><span class="vanue-style">Address:</span> 7345 Northpoint Dr</p>
-          <p><span class="vanue-style">City & State:</span> Newark, NJ</p>
-          <p><span class="vanue-style">Phone:</span> 908-555-3986</p>
+          <p><span class="vanue-style">Address:</span> 11 Shrewburry Street</p>
+          <p><span class="vanue-style">City & State:</span> Worecester, MA</p>
+          <p><span class="vanue-style">Phone:</span> 201-555-7348</p>
         </div>
         <div class="col-md-4">
           <p><span class="vanue-style">PX Phone:</span> 908-243-4356</p>
@@ -726,7 +828,7 @@
       </div>
       <div class="clearfix"></div>
       <div class="col-md-12 text-right">
-        <button class="btn btn-search fnt-weigth"> Edit Vanue</button>
+        <button class="btn btn-search fnt-weigth"> Edit Venue</button>
       </div>
       <div class="clearfix"></div>
       <br>
