--- a/src/app/create-event/create-event.component.html
+++ b/src/app/create-event/create-event.component.html
@@ -1,5 +1,5 @@
 <mat-horizontal-stepper [linear]="isLinear" #stepper>
-  <mat-step [stepControl]="firstFormGroup">
+  <mat-step [stepControl]="firstFormGroup" [completed]="false">
 
     <mat-card class="first-wrap line-height mat-card-sd">
       <ng-template matStepLabel>Program Logistics</ng-template>
