--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -13,3 +13,14 @@
     </div>
   </div>
 </div>
+<div class="col-md-12 sub-header header-section">
+  <div class="col-md-12">
+  <ul>
+    <li>Subnav Option 1</li>
+    <li>Subnav Option 2</li>
+    <li>Subnav Option 3</li>
+    <li>Subnav Option 4</li>
+    <li>Subnav Option 5</li>
+  </ul>
+</div>
+</div>
