--- a/src/app/create-event/create-event.component.css
+++ b/src/app/create-event/create-event.component.css
@@ -297,6 +297,8 @@ td.mat-cell:first-of-type, td.mat-footer-cell:first-of-type, th.mat-header-cell:
 ul.clr-blue.icon-pallet{
     padding-left: 0px;
 }
-
+.mat-tbl-wd{
+    width: 100%;
+}
 
 
