--- a/src/app/create-event/create-event.component.html
+++ b/src/app/create-event/create-event.component.html
@@ -348,7 +348,7 @@
         </p>
       </div>
       <div class="col-md-6">
-        <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" style="width:100%">
+        <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 mat-tbl-wd">
 
           <!--- Note that these columns can be defined in any order.
                         The actual rendered columns are set as a property on the row definition" -->
@@ -450,7 +450,7 @@
         </p>
       </div>
       <div class="col-md-6">
-        <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" style="width:100%">
+        <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 mat-tbl-wd">
 
           <!--- Note that these columns can be defined in any order.
                         The actual rendered columns are set as a property on the row definition" -->
