--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
-
+  .logo-section{
+     padding: 0px;
+     background: -webkit-gradient(linear, left bottom, right top, color-stop(0%, rgba(0,227,227,1)), color-stop(50%, rgba(5,193,255,1)), color-stop(100%, rgba(0,51,51,1))); /* safari4+,chrome */
+  }
   .nopadding.sticky-container{
     height: 100%;
     background: #2B62CA;
