--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="col-md-1 nopadding sticky-container">
-  <div class="col-md-12" style="	background: linear-gradient(317.31deg, #A12BCA 0%, #FF9356 100%); padding: 0px">
+  <div class="col-md-12 logo-section">
     <img src="assets/icons/main-icon.svg" alt="company logo" class="img-responsive custom-logo" />
   </div><!-- col-md-12-->
   <div class="clearfix"></div>
